feat(expense): 強化 Expense 與 ExpenseCategory 更新驗證邏輯與業務限制
- ExpenseServiceImpl：
  - 禁止修改支出日期（防止報表期間錯誤）
  - 驗證 categoryId 是否存在並限制薪資類需指定員工
  - 非薪資類別禁止帶入 employeeId
  - 金額異動自動記錄警示日誌
  - 統一更新允許欄位（amount、note、category、employee）
  - 所有外鍵皆驗證存在，確保資料一致性

- ExpenseCategoryServiceImpl：
  - 禁止修改「費用類別總帳」（EXP-000 根節點）
  - 禁止手動變更 accountCode（改為系統唯讀欄位）
  - 新增類別名稱唯一性檢查（忽略大小寫）
  - parentId 變更時驗證層級結構並防止循環
  - 允許修改名稱、說明與啟用狀態（active）
  - 若 accountCode 遺失自動補碼
  - 強化層級穩定性，避免錯層或結構異常

- 全面優化業務驗證層：
  - 使用 jakarta.validation 驗證 @NotNull、@Positive、@NotBlank
  - Service 層補強 IllegalStateException 與 EntityNotFoundException 控制
  - 對應 Controller 層自動回傳 400 / 404 / 409 統一錯誤結構

- Swagger 文件更新：
  - 明確標示 accountCode 為唯讀欄位
  - 增加 API 錯誤回應說明（BadRequest / Conflict / NotFound）

整體改善目的：
確保支出資料與費用科目主檔邏輯一致，維持報表正確性與 ERP 財務資料穩定性。